 - #1 [poznas] mybatis config