@@ -25,6 +25,13 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>${spring.boot.starter.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${apache.commons.lang.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
