@@ -42,6 +42,12 @@
 		<maven.flyway.plugin.version>5.2.0</maven.flyway.plugin.version>
 		<mybatis.version>1.3.2</mybatis.version>
 		<org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
+		<apache.commons.lang.version>2.6</apache.commons.lang.version>
+
+		<!-- test dependencies properties -->
+		<junit.version>4.12</junit.version>
+		<spock.version>1.0-groovy-2.4</spock.version>
+		<org.codehaus.groovy.version>2.4.4</org.codehaus.groovy.version>
 	</properties>
 
 	<dependencyManagement>
@@ -125,10 +131,32 @@
                 <version>${org.mapstruct.version}</version>
             </dependency>
 
+			<!--  test dependencies -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.spockframework</groupId>
+				<artifactId>spock-core</artifactId>
+				<version>${spock.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.groovy</groupId>
+				<artifactId>groovy-all</artifactId>
+				<version>${org.codehaus.groovy.version}</version>
+				<scope>test</scope>
+			</dependency>
+
+
 		</dependencies>
 	</dependencyManagement>
 
 	<build>
+
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -159,6 +187,32 @@
 						</compilerArgs>
 					</configuration>
 				</plugin>
+<!--
+				<plugin>
+					<groupId>org.codehaus.gmavenplus</groupId>
+					<artifactId>gmavenplus-plugin</artifactId>
+					<version>1.5</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>addTestSources</goal>
+								<goal>testCompile</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.20</version>
+					<configuration>
+						<groups>com.testwithspring.master.UnitTest</groups>
+						<includes>
+							<include>**/*.groovy</include>
+						</includes>
+					</configuration>
+				</plugin>
+-->
 			</plugins>
 		</pluginManagement>
 
