@@ -1,7 +1,6 @@
 package com.agh.hydra.api.register.service;
 
 import com.agh.hydra.api.register.request.UpdateCompaniesRequest;
-import org.springframework.http.ResponseEntity;
 
 import javax.validation.Valid;
 import javax.validation.constraints.NotNull;
@@ -12,5 +11,5 @@ public interface ICompanyService {
      * Updates company entity in database
      * @param request update company request
      */
-    ResponseEntity updateCompany(@Valid @NotNull UpdateCompaniesRequest request);
+    void updateCompanies(@Valid @NotNull UpdateCompaniesRequest request);
 }
