@@ -5,9 +5,6 @@ import com.agh.hydra.api.register.request.UpdateCompaniesRequest;
 import com.agh.hydra.api.register.service.ICompanyService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -33,7 +30,7 @@ public class RegisterController {
 
 
     @PostMapping(COMPANY_UPDATE)
-    public ResponseEntity updateCompany(@Valid @NotNull @RequestBody UpdateCompaniesRequest request){
-        return companyService.updateCompany(request);
+    public void updateCompany(@Valid @NotNull @RequestBody UpdateCompaniesRequest request){
+        companyService.updateCompanies(request);
     }
 }
