@@ -1,1 +1,2 @@
+ - #2 [poznas] groovy spock tests config
  - #1 [poznas] mybatis config
